# dexter

./: .dockerignore  .gitignore  .prettierignore  .release-notes-2026.2.17.md  .release-notes-2026.2.21.md  AGENTS.md  AIHF.md  AZURE_CONFIG.md  CB MOSTAKIM  CLAUDE.md  CODEBASE_AUDIT.md  CODE_QUALITY.md  Dockerfile  Dockerfile.backup  Dockerfile.fixed  FEATURES.md  FRONTEND.md  OPENROUTER_IMPLEMENTATION.md  README.md  README.zh-CN.md  REMOTE_AGENT_ARCHITECTURE.md  REMOTE_AGENT_QUICKSTART.md  REMOTE_AGENT_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_SUMMARY.md  SOUL.md  STATE.md  USER_GUIDE.md  company_tickers.json  compose.yaml  dark_dexter.py  debug-output.txt  demo_status_bar.py  direct-output.txt  docker-compose.yaml  docker-compose.yml  env.container.example  env.example  env.example.remote  eslint.config.mjs  (+25 more)
.dexter/: SOUL.md  settings.json
client/: package.json
dexter-ts/: README.md  package-lock.json  package.json
docs/: Architecture.md  Backend-Plan.md  COUNTER-THESIS-IREN.md  CROSSMINT_INTEGRATION.md  CYCLE-STRUCTURE-MACRO-BIAS.md  Cleanup_Report.md  Cleanup_Report_Iteration2.md  DARK_DEXTER.md  DARK_DEXTER_USER_GUIDE.md  DATA-API-FINANCIAL-DATASETS.md  DATA-API-TASTYTRADE.md  Deployment-Report.md  Dexter_Groww_API_Architecture.md  ESSAY-WORKFLOW.md  EXTERNAL-RESOURCES.md  FUND-CONFIG.md  Frontend-Plan.md  HEARTBEAT.example.md  HELIUS_INTEGRATION.md  HYPERLIQUID-SYMBOL-MAP.md  PRD-AIHF-DOUBLE-CHECK.md  PRD-FINNHUB-SUBAGENTS.md  PRD-FRONTEND-BRAND-STYLING.md  PRD-HYPERLIQUID-PORTFOLIO-PARITY.md  PRD-HYPERLIQUID-PORTFOLIO.md  PRD-PORTFOLIO-BUILDER.md  PRD-SETUP-IMPROVEMENTS.md  PRD-STARTUP-STACK.md  PRD-TASTYTRADE-INTEGRATION.md  PRD-TASTYTRADE-OPTIONS-EXPLORATION.md  PRD-TASTYTRADE-PHASE-5-THETA-ENGINE.md  PRD-UNIFIED-FRONTEND-DEXTER-HEDGEFUND.md  PRD-WEB-FEATURE-PARITY.md  ROADMAP-FUND-NEWSLETTER.md  RUNBOOK-TASTYTRADE-OPTIONS-FROM-HYPERSURFACE.md  Requirements.md  Review-Report.md  SAM3_INTEGRATION.md  SOUL-HL.example.md  TASTYTRADE-SYMBOLOGY.md  (+15 more)
examples/: agent_pool_example.py  birdeye_price_analysis.py  crossmint_example.py  goat_plugins_example.py  helius_example.py  persistent_agent_example.py  sam3_vision_example.py  simple_remote_agent.py
futu-bridge/: server.py
integration/: DEPLOY.md  INTEGRATION_GUIDE.md  MANUAL_COPY.md  QUICKSTART.sh  QUICK_START.md  README.md  deploy.sh
legacy/: README.md  env.example  pyproject.toml
python/: mcp_server.py
(+1010 files in other folders)
