[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter"
version = "0.2.3"
description = "AI agent for financial analysis."
authors = []
requires-python = ">=3.10"
dependencies = [
    "googlenewsdecoder>=0.1.7",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langsmith>=0.3.37",
    "openai>=2.2.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "solana>=0.30.2",
    "solders>=0.18.0",
    "goat-sdk>=0.1.0",
    "goat-sdk-wallet-crossmint>=0.1.0",
    "goat-sdk-wallet-solana>=0.1.0",
    "goat-sdk-adapter-langchain>=0.1.0",
    "goat-sdk-plugin-jupiter>=0.1.0",
    "goat-sdk-plugin-lulo>=0.1.0",
    "goat-sdk-plugin-coingecko>=0.1.0",
    "goat-sdk-plugin-dexscreener>=0.1.0",
    "goat-sdk-plugin-rugcheck>=0.1.0",
    "goat-sdk-plugin-nansen>=0.1.0",
]

[project.scripts]
dexter-agent = "dexter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
